--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,18 @@
 # Created by https://www.gitignore.io
 
 ### Sass ###
-/assets/.sass-cache/
+/assets/scss/.sass-cache/
+assets/scss/.sass-cache/
 /assets/bower_components/
 *.css.map
 
 assets/config.codekit
 
 /assets/functions/cache/
+
+node_modules
+assets/scss/.sass-cache/7855a286caa898b775b3d4eca3628e96e5148273/_settings.scssc
+
+assets/config (Timmy’s MacBook Pro's conflicted copy 2015-01-26).codekit
+
+*.codekit
