--- a/assets/bower.json
+++ b/assets/bower.json
@@ -1,11 +1,6 @@
 {
-  "name": "foundation-compass-app",
-  "version": "0.0.1",
-  "private": "true",
+  "name": "foundation-libsass-template",
   "dependencies": {
     "foundation": "zurb/bower-foundation"
-  },
-  "resolutions": {
-    "jquery": ">= 2.1.0"
   }
 }
