updated to font-awesome 4.5; calling different library via bower

--- a/assets/bower.json
+++ b/assets/bower.json
@@ -2,6 +2,6 @@
   "name": "foundation-libsass-template",
   "dependencies": {
     "foundation": "zurb/bower-foundation",
-    "fontawesome": "~4.4.0"
+    "font-awesome": "fontawesome#~4.5.0"
   }
 }
