--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "url": "https://github.com/zurb/foundation-libsass-template.git"
   },
   "devDependencies": {
-    "autoprefixer-core": "^6.0.1",
+    "autoprefixer": "^6.0.1",
     "browser-sync": "^2.8.1",
     "grunt": "~0.4.5",
+    "grunt-bower-update": "^0.1.2",
     "grunt-browser-sync": "^2.1.3",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-imagemin": "^1.0.0",
