--- a/assets/bower.json
+++ b/assets/bower.json
@@ -2,6 +2,7 @@
   "name": "foundation-libsass-template",
   "dependencies": {
     "foundation": "zurb/bower-foundation",
-    "font-awesome": "fontawesome#~4.6.3"
+    "font-awesome": "fontawesome#~4.6.3",
+    "lightbox2": "^2.9.0"
   }
 }
